# piighost-chat

./: .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  Dockerfile.piighost-api  LICENSE  Makefile  README.md  compose.infra.yml  compose.prod.yml  compose.yml  docker-compose.yml  pipeline.py
backend/: Dockerfile  README.md  pyproject.toml
backend/src/piighost_chat/: app.py  cli.py  schemas.py  utils.py  worker.py
frontend/: Dockerfile.prod  index.html  nginx.conf  package-lock.json  package.json
frontend/src/: App.tsx  app.css  app.html  index.css  swiper.d.ts
frontend/src/components/: ConversationScreen.tsx  CreateProjectModal.tsx  DeleteChatModal.tsx  Meta.tsx  PromptBoxScreen.tsx  RenameProjectModal.tsx
frontend/src/components/chat/: ChatInput.tsx  data.tsx
frontend/src/components/settings/: PreferenceTab.tsx  ResourcesTab.tsx  SettingsSidebar.tsx
frontend/src/components/sidebar/: ChatHistory.tsx  SidebarHeader.tsx  (+2 more)
frontend/src/layouts/: AppSidebar.tsx  RootLayout.tsx
frontend/src/lib/: api.ts
frontend/src/pages/: Home.tsx
frontend/src/routes/: +layout.svelte  +page.svelte
frontend/src/services/: api.ts
frontend/src/utils/: theme-provider.tsx
frontend_v2/: README.md  package.json
frontend_v2/src/: vite-env.d.ts
frontend_v2/src/components/: ConversationScreen.tsx  DeleteMessageModal.tsx  DeleteProjectModal.tsx  LogoutModal.tsx  MobileHeader.tsx  PromptBoxScreen.tsx  RenameChatModal.tsx  SearchModal.tsx  SettingsModal.tsx
frontend_v2/src/layouts/: AppSidebar.tsx
frontend_v2/src/pages/: Home.tsx
frontend_v2/src/services/: api.ts
(+20 files in other folders)
