[project]
name = "piighost-chat"
version = "0.1.0"
description = "Chat interface with PII anonymization, powered by piighost-api and LangChain."
readme = "README.md"
license = { text = "MIT" }
authors = [
    { name = "Athroniaeth" },
]
requires-python = ">=3.12"
dependencies = [
    "piighost[client,middleware]>=0.4",
    "langchain>=1.2",
    "langchain-openai>=0.3",
    "langgraph-checkpoint-postgres>=2.0",
    "litestar>=2.16",
    "uvicorn>=0.34",
    "msgspec>=0.19",
    "psycopg[binary]>=3.2",
    "keyshield[cli]>=2.0.0",
    "aiocache>=0.12.3",
    "taskiq>=0.11",
    "taskiq-redis>=1.0",
]

[project.scripts]
piighost-chat = "piighost_chat.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/piighost_chat"]

[tool.pyrefly]
search_path = ["src"]

[tool.pytest.ini_options]
addopts = "--cov=src/piighost_chat"
asyncio_mode = "auto"

[tool.coverage.report]
show_missing = true

[dependency-groups]
dev = [
    "ruff>=0.15",
    "pytest>=9.0",
    "pytest-cov>=6.0",
    "pytest-asyncio>=0.25",
    "pyrefly>=0.55",
]
